--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "matplotlib==3.10.0",
+    "matplotlib>=3.3.0,<3.5.0",  # Matplotlib version that should work with Python 3.9
     "numpy==1.26.4",
     "pytest==7.1.2",
     "pytest-cov==3.0.0",
     "scipy==1.12.0"
 ]
+
 
 [project.urls]
 homepage = "https://github.com/K-batonisashvili/ME700/tree/main/Assignment-1-Newtons-Method"
