--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
         pytest -v
     - name: Generate coverage report
       run: |
-        pytest --cov=setupexample --cov-report=xml
+        pytest --cov=. --cov-report=xml
     - name: Upload coverage to Codecov
       # https://github.com/codecov/codecov-action/blob/master/README.md
       uses: codecov/codecov-action@v3
