--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,5 @@
 name: tests
 
-# reference:
-# https://github.com/pybind/python_example/blob/master/.github/workflows/pip.yml
-
-# on: [push]
 on:
   push:
     paths:
@@ -15,45 +11,41 @@ jobs:
       max-parallel: 2
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
-        # platform: [macos-latest]
-        # platform: [windows-latest, macos-latest]
-        # platform: [ubuntu-latest, macos-latest]
-        # python-version: [3.9.5, 3.10.0]
-        # python-version: [3.9.5]
-        # python-version: [3.9]
-        # python-version: [3.8]
         python-version: [3.9.13]
-        # python-version: [3.7]
-        # python-version: [3.10.0]
-        #python-version: [3.9, 3.10]
 
     runs-on: ${{ matrix.platform }}
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-    # - name: Test with unittest
-    - name: Test with pytest
+
+    - name: Run tests with pytest
       run: |
-        pytest -v
+        pytest -v tests/
+
     - name: Generate coverage report
       run: |
         pytest --cov=. --cov-report=xml
+
+    - name: Verify coverage file
+      run: |
+        ls -l coverage.xml || echo "coverage.xml NOT FOUND"
+
     - name: Upload coverage to Codecov
-      # https://github.com/codecov/codecov-action/blob/master/README.md
       uses: codecov/codecov-action@v3
       with:
-        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-        # files: ./coverage1.xml,./coverage2.xml # optional
+        token: ${{ secrets.CODECOV_TOKEN }}  # Required for private repos
         files: ./coverage.xml
-        flags: unittests # optional
-        name: codecov-umbrella # optional
-        fail_ci_if_error: true # optional (default = false)
-        verbose: true # optional (default = false)
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
+        verbose: true
