--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build:
     strategy:
-      max-parallel: 2
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
         python-version: [3.9.13]
@@ -17,33 +16,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-
-    - name: Run tests with pytest
+    - name: Test with pytest
       run: |
-        pytest -v tests/
-
+        pytest test_MaterialModel.py -v  # Add this line here to specify the test file
     - name: Generate coverage report
       run: |
-        pytest --cov=. --cov-report=xml
-
-    - name: Verify coverage file
-      run: |
-        ls -l coverage.xml || echo "coverage.xml NOT FOUND"
-
+        pytest --cov=test_MaterialModel --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}  # Required for private repos
+        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
         files: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
