--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,9 @@
 name: tests
 
+# reference:
+# https://github.com/pybind/python_example/blob/master/.github/workflows/pip.yml
+
+# on: [push]
 on:
   push:
     paths:
@@ -11,7 +15,17 @@ jobs:
       max-parallel: 2
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
+        # platform: [macos-latest]
+        # platform: [windows-latest, macos-latest]
+        # platform: [ubuntu-latest, macos-latest]
+        # python-version: [3.9.5, 3.10.0]
+        # python-version: [3.9.5]
+        # python-version: [3.9]
+        # python-version: [3.8]
         python-version: [3.9.13]
+        # python-version: [3.7]
+        # python-version: [3.10.0]
+        #python-version: [3.9, 3.10]
 
     runs-on: ${{ matrix.platform }}
 
@@ -25,18 +39,21 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
+    # - name: Test with unittest
     - name: Test with pytest
       run: |
-        pytest ME700HW1/tests/ -v
+        pytest -v
     - name: Generate coverage report
       run: |
-        pytest --cov=ME700HW1 --cov-report=xml
+        pytest --cov=setupexample --cov-report=xml
     - name: Upload coverage to Codecov
+      # https://github.com/codecov/codecov-action/blob/master/README.md
       uses: codecov/codecov-action@v3
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+        # files: ./coverage1.xml,./coverage2.xml # optional
         files: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: true
-        verbose: true
+        flags: unittests # optional
+        name: codecov-umbrella # optional
+        fail_ci_if_error: true # optional (default = false)
+        verbose: true # optional (default = false)
