--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,17 +15,7 @@ jobs:
       max-parallel: 2
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
-        # platform: [macos-latest]
-        # platform: [windows-latest, macos-latest]
-        # platform: [ubuntu-latest, macos-latest]
-        # python-version: [3.9.5, 3.10.0]
-        # python-version: [3.9.5]
-        # python-version: [3.9]
-        # python-version: [3.8]
         python-version: [3.9.13]
-        # python-version: [3.7]
-        # python-version: [3.10.0]
-        #python-version: [3.9, 3.10]
 
     runs-on: ${{ matrix.platform }}
 
@@ -39,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-    # - name: Test with unittest
+        pip install pytest-cov  # Add this line to install pytest-cov
     - name: Test with pytest
       run: |
         pytest -v
@@ -47,8 +37,7 @@ jobs:
       run: |
         pytest --cov=tests/test_MaterialModel.py --cov-report=xml
     - name: Upload coverage to Codecov
-      # https://github.com/codecov/codecov-action/blob/master/README.md
-      uses: codecov/codecov-action@v5
+      uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
         files: ./coverage.xml
