--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,46 +1,51 @@
-name: tests
+name: Run Tests and Upload Coverage to Codecov
 
 on:
   push:
-    paths:
-      - '**.py'
+    branches:
+      - main
 
 jobs:
-  build:
-    strategy:
-      max-parallel: 2
-      matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
-        python-version: [3.9.13]
-
-    runs-on: ${{ matrix.platform }}
+  test:
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest-cov
-    - name: Test with pytest
-      run: |
-        pytest -v
-    - name: Generate coverage report
-      run: |
-        pytest --cov=tests --cov-report=xml:coverage.xml  # Save coverage.xml in the root directory
-    - name: Check generated files
-      run: |
-        ls -l  # List files in the working directory to check if coverage.xml is generated
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: true
-        verbose: true
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
+
+      # Run tests and generate coverage report
+      - name: Run tests and generate coverage report
+        run: |
+          pytest --cov=tests --cov-report=xml:coverage.xml -v
+
+      # Verify that coverage.xml exists
+      - name: Verify coverage.xml exists
+        run: |
+          if [ -f "./coverage.xml" ]; then echo "coverage.xml exists"; else echo "coverage.xml not found"; fi
+
+      # List generated files to ensure the file is in the right place
+      - name: List generated files
+        run: ls -l
+
+      # Upload coverage to Codecov
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          verbose: true
