--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,11 +20,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      # Install dependencies
+      # Install dependencies directly (skip requirements.txt)
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
           pip install pytest pytest-cov
 
       # Run tests and generate coverage report
