--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,11 +20,11 @@ jobs:
         with:
           python-version: '3.x'
 
-      # Install dependencies directly (skip requirements.txt)
+      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov numpy
 
       # Run tests and generate coverage report
       - name: Run tests and generate coverage report
