--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
       # Run tests and generate coverage report
       - name: Run tests and generate coverage report
         run: |
-          pytest --cov=tests --cov-report=xml:coverage.xml -v
+          pytest --cov=tests --cov-report=xml:coverage.xml -v  # Coverage for tests only
 
       # Verify that coverage.xml exists
       - name: Verify coverage.xml exists
