--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,10 +26,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest pytest-cov numpy
 
+      # Set the PYTHONPATH so pytest can find the 'src' directory
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=src" >> $GITHUB_ENV
+
       # Run tests and generate coverage report
       - name: Run tests and generate coverage report
         run: |
-          pytest --cov=tests --cov-report=xml:coverage.xml -v  # Coverage for tests only
+          pytest --cov=tests --cov-report=xml:coverage.xml -v
 
       # Verify that coverage.xml exists
       - name: Verify coverage.xml exists
