--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,16 +6,34 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      # Checkout the repository
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run tests (Linux/macOS)
+        if: runner.os != 'Windows'
+        run: PYTHONPATH=src pytest --cov=src --cov=tests --cov-report=xml:coverage.xml --cov-report=term-missing -v
+
+      - name: Run tests (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          $env:PYTHONPATH="src"
+          pytest --cov=src --cov=tests --cov-report=xml:coverage.xml --cov-report=term-missing -v
+        shell: pwsh
 
       # Set up Python
       - name: Set up Python
