--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,10 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       # Checkout the repository
@@ -26,19 +29,24 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest pytest-cov numpy
 
+      # Set PYTHONPATH correctly for all OS
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=src" >> $GITHUB_ENV
+
       # Run tests and generate coverage report
       - name: Run tests and generate coverage report
-        run: |
-          PYTHONPATH=src pytest --cov=src --cov=tests --cov-report=xml:coverage.xml --cov-report=term-missing -v
+        run: pytest --cov=src --cov=tests --cov-report=xml:coverage.xml --cov-report=term-missing -v
 
       # Verify that coverage.xml exists
       - name: Verify coverage.xml exists
         run: |
           if [ -f "./coverage.xml" ]; then echo "coverage.xml exists"; else echo "coverage.xml not found"; exit 1; fi
+        shell: bash
 
       # List generated files to ensure the file is in the right place
       - name: List generated files
         run: ls -l
+        shell: bash
 
       # Upload coverage to Codecov
       - name: Upload coverage to Codecov
